# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1317 2010-08-20 17:42:14 cr Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta2 2010-08-23
 - 2010-08-20 Fixed bug#5784 - Core.AJAX.js fails if if called without callback
    parameter and also exception handler breaks.
 - 2010-08-20 Fixed bug#5783 - Warning: Ticket locked! message when replying to
    unlocked ticket.
 - 2010-08-20 Updated database diagram to reflect changes in OTRS 3.
 - 2010-08-19 Fixed bug#5768 - No tickets shown at customer interface if no open
    tickets exist.
 - 2010-08-19 Fixed bug#5639 - Global Overview: No action when clicking a row in
    S/M/L view mode.
 - 2010-08-19 Fixed bug#5728 - Ticket history shows wrong date and time for agent
    actions "createtime" (actually shows user creation date).
 - 2010-08-19 Fixed bug#5727 - Ticket search results are not sortable.
 - 2010-08-19 Fixed bug#5611 - Company Button has the same function as Tickets Button.
 - 2010-08-19 Fixed bug#5760 - Adding a new ticket in the customer interface
    can result in 2 tickets.
 - 2010-08-19 Fixed bug#5722 - Customer interface does not display error messages
    when creating a ticket.
 - 2010-08-18 Fixed bug#5662 - In Global Ticket Overview, in L-Mode, template
    support is missing in "Reply" feature.
 - 2010-08-18 Fixed bug#5764 - No move option in S/M/L mode available.
 - 2010-08-18 Fixed bug#5725 - Missing labels for search-terms in customer interface.
 - 2010-08-17 Fixed bug#5598 - Address Book To: field does is not populated.
 - 2010-08-17 Fixed bug#5679 - In "New Ticket" in customer interface,
    selecting the queue automatically submits the ticket.
 - 2010-08-17 Fixed bug#5724 - Security leak: Edit HTML source code as customer.