@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1317 2010-08-20 17:42:14 cr Exp $
+# $Id: CHANGES,v 1.1318 2010-08-21 18:26:52 cr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 3.0.0 beta2 2010-08-23
+ - 2010-08-21 Fixed bug#5766 - Complex LinkObject Table is broken when more
+    than one kind of object is linked.
  - 2010-08-20 Fixed bug#5784 - Core.AJAX.js fails if if called without callback
     parameter and also exception handler breaks.
  - 2010-08-20 Fixed bug#5783 - Warning: Ticket locked! message when replying to
